--- a/templates/authentication/index.html
+++ b/templates/authentication/index.html
@@ -34,7 +34,7 @@
             <div class="logoContainer">
               <div class="logoAndBalance">          
                 <a class="logo"><img src= {% static 'assets/logo.png' %} alt="logo"></a>
-                <h4>Balance: {{user.last_name}}</h4>
+                <h4>Balance: ${{user.last_name}}</h4>
               </div>
                 <i class="fas fa-bars" onclick="toggleMenu()"></i>
             </div>
