--- a/templates/authentication/account.html
+++ b/templates/authentication/account.html
@@ -27,13 +27,13 @@
     <header>
       {% if user.is_authenticated %}
 
-      <div class="headerDivMain">
-        <div class="logoContainer">
-          <a class="logo"
-            ><img src= {% static 'assets/logo.png' %} alt="logo"></a
-          >
-          <i class="fas fa-bars" onclick="toggleMenu()"></i>
+      <div class="logoContainer">
+        <div class="logoAndBalance">          
+          <a class="logo"><img src= {% static 'assets/logo.png' %} alt="logo"></a>
+          <h4>Balance: ${{user.last_name}}</h4>
         </div>
+          <i class="fas fa-bars" onclick="toggleMenu()"></i>
+      </div>
 
         <div class="menuItems" id="menuList">
           <div>
@@ -142,7 +142,7 @@
           <div class="balanceContainer">
             <h1 class="grayText" id="currento">Current balance:</h1>
             <h1 id="balance" onclick="" class="actualBalance">
-              {{user.last_name}} BTC
+              {{user.last_name}} USD
             </h1>
           </div>
         </div>
